create_yamls/exports/kuro/kuro-deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuro-nginx
  namespace: kuro
spec:
  selector:
    matchLabels:
      app: kuro-nginx
  template:
    metadata:
      labels:
        app: kuro-nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
        - mountPath: /etc/nginx/modifyconf/
          name: conf
        command: ["/bin/sh", "-c"]
        args:
          - cp /etc/nginx/modifyconf/nginx.conf /etc/nginx/;
            service nginx restart;
            truncate -s 64 /usr/share/nginx/html/64b;
            truncate -s 100k /usr/share/nginx/html/100k;
            echo `hostname` > /usr/share/nginx/html/index.html;
            tail -f /dev/null      
      volumes:
      - name: conf
        configMap:
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
