create_yamls/exports/kuro/kuro-deployment-tsung.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuro-tsung
  namespace: kuro
spec:
  selector:
    matchLabels:
      app: kuro-tsung
  template:
    metadata:
      labels:
        app: kuro-tsung
    spec:
      containers:
      - name: tsung
        image: prima/tsung
        volumeMounts:
        - mountPath: /tmp/
          name: conf
          readOnly: false
        command: ["/bin/sh", "-c"]
        args:
          - sed "s/hostname/`hostname`/g" /tmp/64b.xml > /root/64b.xml;
            sed "s/hostname/`hostname`/g" /tmp/100k.xml > /root/100k.xml;
            sed "s/hostname/`hostname`/g" /tmp/24hour-100rps.xml > /root/24hour-100rps.xml;
            tail -f /dev/null
      volumes:
      - name: conf
        configMap:
          name: tsung-xml
          items:
            - key: 64b.xml
              path: 64b.xml
            - key: 100k.xml
              path: 100k.xml
            - key: 24hour-100rps.xml
              path: 24hour-100rps.xml
