create_yamls/exports/kuro/kuro-service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuro-nginx
  namespace: kuro
spec:
  selector:
    app: kuro-nginx
  ports:
  - port: 80
